# superside-challenge

./: .dockerignore  .env.airflow.local.example  .env.dbt.local.example  .env.services.local.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: pull-request.workflow.yaml
dags/: .airflowignore  settings.py  transformations.py
dbt/superside/: .sqlfluff  dbt_project.yml  packages.yml  profiles.yml
dbt/superside/macros/: macros.yml
dbt/superside/models/marts/: _marts__models.yml  fct_engagement_metrics.sql  project_engagement.sql
dbt/superside/models/staging/: _clients__models.yml  _clients__sources.yml  stg_clients__engagement_metrics.sql
dbt/superside/seeds/: seeds.yml
dbt/superside_challenge/: dbt_project.yml  profiles.yml
dbt/superside_challenge/macros/: generate_schema_name.sql  macros.yml
dbt/superside_challenge/models/staging/: _clients__models.yml
diagrams/: diagram.py
infra/: .terraform.lock.hcl  airbyte-values.yml  airbyte.tf  airflow-values.yml  airflow.tf  main.tf  providers.tf  variables.tf
scripts/: clients_postgres_init.sh  hide_dbt_resources_from_docs.py  postgres_init.sh  warehouse_postgres_init.sh
